--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -26,9 +26,10 @@ jobs:
       - name: Run tests
         run: |
           docker run --name gtfonow_test_${{ matrix.python-version }} -d gtfonow_test:${{ matrix.python-version }}
-
+      - name: Wait
+        run: sleep 15
       - name: Run Pytest
-        run: docker exec gtfonow_test_${{ matrix.python-version }} su -l lowpriv -c "pytest -v --cov=gtfonow --cov-report=xml --cov-report=term-missing"
+        run: docker exec -u lowpriv gtfonow_test_${{ matrix.python-version }} pytest -v --cov=gtfonow --cov-report=xml --cov-report=term-missing
       - name: Copy coverage report from Docker container to host
         run: docker cp gtfonow_test_${{ matrix.python-version }}:/home/lowpriv/coverage.xml .
 
